; ModuleID = '/home/carl/AnghaBench/kphp-kdb/letters/extr_letters-data.c_load_index.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/letters/extr_letters-data.c_load_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i64, i64, i64 }

@LETTERS_INDEX_MAGIC = common dso_local global i64 0, align 8
@header = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@MAX_PRIORITY = common dso_local global i32 0, align 4
@fd = common dso_local global i32* null, align 8
@SEEK_SET = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [71 x i8] c"error reading header from index file: read %d bytes instead of %d: %m\0A\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"bad letters index file header\0A\00", align 1
@verbosity = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [15 x i8] c"header loaded\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @load_index(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @dl_open_file(i32 0, i8* %10, i32 -1)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %40

13:                                               ; preds = %9, %1
  %14 = load i64, i64* @LETTERS_INDEX_MAGIC, align 8
  store i64 %14, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 0), align 8
  %15 = call i32 @time(i32* null)
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 2), align 8
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %36, %13
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @MAX_PRIORITY, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %39

20:                                               ; preds = %16
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 1), align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 1), align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  store i64 0, i64* %30, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 1), align 8
  %32 = load i32, i32* %4, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 2
  store i64 0, i64* %35, align 8
  br label %36

36:                                               ; preds = %20
  %37 = load i32, i32* %4, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %4, align 4
  br label %16

39:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %83

40:                                               ; preds = %9
  %41 = load i32*, i32** @fd, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @SEEK_SET, align 4
  %45 = call i64 @lseek(i32 %43, i32 0, i32 %44)
  %46 = icmp eq i64 %45, 0
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert(i32 %47)
  store i32 4, i32* %5, align 4
  %49 = load i32*, i32** @fd, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %5, align 4
  %53 = call i32 @read(i32 %51, %struct.TYPE_5__* @header, i32 %52)
  store i32 %53, i32* %6, align 4
  %54 = load i32, i32* %6, align 4
  %55 = load i32, i32* %5, align 4
  %56 = icmp ne i32 %54, %55
  br i1 %56, label %57, label %62

57:                                               ; preds = %40
  %58 = load i32, i32* @stderr, align 4
  %59 = load i32, i32* %6, align 4
  %60 = load i32, i32* %5, align 4
  %61 = call i32 (i32, i8*, ...) @fprintf(i32 %58, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str, i64 0, i64 0), i32 %59, i32 %60)
  br label %62

62:                                               ; preds = %57, %40
  %63 = load i32, i32* %6, align 4
  %64 = load i32, i32* %5, align 4
  %65 = icmp eq i32 %63, %64
  %66 = zext i1 %65 to i32
  %67 = call i32 @assert(i32 %66)
  %68 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @header, i32 0, i32 0), align 8
  %69 = load i64, i64* @LETTERS_INDEX_MAGIC, align 8
  %70 = icmp ne i64 %68, %69
  br i1 %70, label %71, label %75

71:                                               ; preds = %62
  %72 = load i32, i32* @stderr, align 4
  %73 = call i32 (i32, i8*, ...) @fprintf(i32 %72, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %74 = call i32 @assert(i32 0)
  br label %75

75:                                               ; preds = %71, %62
  %76 = load i32, i32* @verbosity, align 4
  %77 = icmp sgt i32 %76, 1
  br i1 %77, label %78, label %81

78:                                               ; preds = %75
  %79 = load i32, i32* @stderr, align 4
  %80 = call i32 (i32, i8*, ...) @fprintf(i32 %79, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  br label %81

81:                                               ; preds = %78, %75
  %82 = call i32 @dl_close_file(i32 0)
  store i32 1, i32* %2, align 4
  br label %83

83:                                               ; preds = %81, %39
  %84 = load i32, i32* %2, align 4
  ret i32 %84
}

declare dso_local i64 @dl_open_file(i32, i8*, i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @lseek(i32, i32, i32) #1

declare dso_local i32 @read(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @dl_close_file(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
